--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <button class="js-stop play-btn">Megállok</button>
             <button class="js-newgame play-btn">Új játék</button>
         </div>
+        <div class="game-area">
+            <div class="cards-place">
+                <p class="cards-owner">Játékos lapjai</p>
+                <div class="js-players-table">
+                    <!-- <img class="card-img" src="./imgs/English_pattern_10_of_clubs.svg" alt=""> -->
+                </div>
+            </div>
+            <div class="cards-place">
+                <p class="cards-owner">Osztó lapjai</p>
+                <div class="js-dealers-table">
+
+                </div>
+            </div>
+        </div>
         <div class="js-table table">
             <div class="hands">
                 <div class="hand">
@@ -39,8 +53,7 @@
             </div>
             <div class="js-results results"></div>
         </div>
-        <div class="players-table"></div>
-        <div class="dealers-table"></div>
+
     </main>
     <footer></footer>
     <script src=" ./js/app.js">
