--- a/index.html
+++ b/index.html
@@ -27,26 +27,22 @@
         <div class="game-area">
             <div class="cards-place">
                 <p class="cards-owner">Játékos lapjai</p>
-                <div class="js-players-table">
-                    <!-- <img class="card-img" src="./imgs/English_pattern_10_of_clubs.svg" alt=""> -->
-                </div>
+                <div class="js-players-table"></div>
             </div>
             <div class="cards-place">
                 <p class="cards-owner">Osztó lapjai</p>
-                <div class="js-dealers-table">
-
-                </div>
+                <div class="js-dealers-table"></div>
             </div>
         </div>
         <div class="js-table table">
             <div class="hands">
                 <div class="hand">
-                    <p class="whosehand">A játékos kártyái</p>
+                    <p class="whosehand">A játékos lapjai</p>
                     <p class="js-valuesp values"></p>
                     <div class="js-players-hand"></div>
                 </div>
                 <div class="hand">
-                    <p class="whosehand">A dealer kártyái</p>
+                    <p class="whosehand">A dealer lapjai</p>
                     <p class="js-valuesd values"></p>
                     <div class="js-dealers-hand"></div>
                 </div>
