--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
                     <div class="js-dealers-hand"></div>
                 </div>
             </div>
-            <div class="js-results results"></div>
         </div>
-
+        <div class="js-results results"></div>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="https://bodnarb.hu">Boglarka Bodnar &copy;</a>
+        <a href="https://github.com/BodnarB">GitHub</a>
+    </footer>
     <script src=" ./js/app.js">
     </script>
 </body>
