--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="btns">
-            <button class="js-give-card play-btn">Kártyát kérek</button>
+            <button class="js-give-card play-btn">Lapot kérek</button>
             <button class="js-stop play-btn">Megállok</button>
             <button class="js-newgame play-btn">Új játék</button>
         </div>
@@ -51,7 +51,7 @@
         <div class="js-results results"></div>
     </main>
     <footer>
-        <a href="https://bodnarb.hu">Boglarka Bodnar &copy;</a>
+        <a href="https://bodnarb.hu">Boglarka Bodnar &copy; 2022</a>
         <a href="https://github.com/BodnarB">GitHub</a>
     </footer>
     <script src=" ./js/app.js">
